--- a/Dyplom/rozdzial03.tex
+++ b/Dyplom/rozdzial03.tex
@@ -1,2 +1,5 @@
 \chapter{Implementacja}
 % TO DO: dodać jakieś zagajenie
+W tej części pracy zostanie omówiona implementacja systemu eBOK, która jest kluczowym etapem realizacji projektu. Implementacja odnosi się do praktycznego wdrożenia wcześniej zaprojektowanych funkcji oraz architektury systemu, a także przekształcenia wymagań funkcjonalnych i niefunkcjonalnych w działający kod. Główna uwaga zostanie poświęcona kluczowym aspektom procesu implementacji, takim jak wybór narzędzi programistycznych, struktura kodu, integracja z bazą danych, a także testowanie aplikacji.
+
+Celem tej części pracy jest przedstawienie kroków prowadzących od teoretycznego projektu do działającego systemu, który będzie spełniał założenia funkcjonalne i będzie dostosowany do wymagań użytkowników. Skupimy się również na wyjaśnieniu zastosowanych technologii oraz opisaniu poszczególnych komponentów aplikacji, co pozwoli na pełniejsze zrozumienie procesów związanych z jej realizacją.
