--- a/Dyplom/skroty.tex
+++ b/Dyplom/skroty.tex
@@ -7,4 +7,10 @@
 \begin{description}[labelwidth=*]
   \item [eBOK] (pl.\ \emph{Elektroniczne Biuro Obsługi Klienta})
   \item [eCSO] (ang.\ \emph{Electronic Customer Service Office})
+  \item [API] (ang.\ \emph{Application Programming Interface})
+  \item [HTTPS] (ang.\ \emph{Hypertext Transfer Protocol Secure})
+  \item [TLS] (ang.\ \emph{Transport Layer Security})
+  \item [JSON] (ang.\ \emph{JavaScript Object Notation})
+  \item [PostgreSQL] (ang.\ \emph{Postgre Structured Query Language})
+  \item [XSS] (ang.\ \emph{Cross-Site Scripting})
 \end{description}
